feat: Optimize backend performance and Vercel deployment
Enhances backend API performance by adjusting `yt-dlp` options for faster processing and reduced data transfer. Updates Vercel configuration to allocate more memory and a longer timeout for the Python function, improving stability for longer downloads. Also increases the client-side timeout to prevent premature abandonment of requests.

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/index.py" },
     { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  ],
+  "functions": {
+    "api/index.py": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  }
 }
